# Backend/SHOP_RUNNER/SHOP_RUNNER/Models/Staff_model/Staff_register.cs
@@ -7,13 +7,17 @@ namespace SHOP_RUNNER.Models.Staff_model
         [Required, MinLength(6)]
         public string FullName { get; set; } = string.Empty;
 
-        [Required, EmailAddress]
-        public string Email { get; set; } = string.Empty;
-
         [Required, MinLength(6)]
         public string Password { get; set; } = string.Empty;
 
         [Required, Compare("Password")]
         public string ConfirmPassword { get; set; } = string.Empty;
     }
+
+    public class DTO_staff_regis { 
+        public string email { get; set; }
+        public string password { get; set; }
+        
+    }
+
 }
